# ChangeLog for media-libs/jbigkit
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/jbigkit/ChangeLog,v 1.51 2012/03/12 17:57:41 scarabeus Exp $

  12 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org> jbigkit-2.0-r1.ebuild:
  Deploy static libs only if wanted.

  09 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -jbigkit-1.6-r1.ebuild,
  -files/jbigkit-1.6-build.patch, -files/jbigkit-1.6-respect-make.patch,
  -files/jbigkit-1.6-shared-lib.patch, -jbigkit-2.0.ebuild,
  -files/jbigkit-2.0-build.patch:
  old

  05 Sep 2010; Raúl Porcel <armin76@gentoo.org> jbigkit-2.0-r1.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #322193

  25 Jul 2010; Tobias Klausmann <klausman@gentoo.org> jbigkit-2.0-r1.ebuild:
  Stable on alpha, bug #322193

  21 Jul 2010; Markus Meier <maekke@gentoo.org> jbigkit-2.0-r1.ebuild:
  arm stable, bug #322193

  14 Jul 2010; Jeroen Roovers <jer@gentoo.org> jbigkit-2.0-r1.ebuild:
  Stable for HPPA (bug #322193).

  04 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> jbigkit-2.0-r1.ebuild:
  ppc64 stable wrt #322193

  26 Jun 2010; <nixnut@gentoo.org> jbigkit-2.0-r1.ebuild:
  ppc stable #322193

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> jbigkit-2.0-r1.ebuild:
  stable amd64, bug 322193

  13 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  jbigkit-2.0-r1.ebuild:
  x86 stable wrt bug #322193

  31 May 2010; Steve Arnold <nerdboy@gentoo.org> jbigkit-2.0-r1.ebuild:
  Forced tests to be run sequentially as intended, fixes bug #314963. 
  The tests create, convert, and delete a bunch of test files, so it
  pretty much has to be serial rather than parallel.

*jbigkit-2.0-r1 (15 Mar 2010)

  15 Mar 2010; Fabian Groffen <grobian@gentoo.org> +jbigkit-2.0-r1.ebuild,
  +files/jbigkit-2.0-r1-build.patch:
  Revbump for EAPI=3 and fixed build patch such that the Darwin bits are
  actually active and correct.  Transferred Prefix keywords.
