@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/jbigkit/Attic/jbigkit-2.0-r1.ebuild,v 1.11 2012/03/12 17:57:41 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/jbigkit/Attic/jbigkit-2.0-r1.ebuild,v 1.12 2012/03/12 19:15:37 ssuominen Exp $
 
 EAPI=4
 
@@ -13,7 +13,7 @@ SRC_URI="http://www.cl.cam.ac.uk/~mgk25/download/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~sparc-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
-IUSE="static-libs"
+IUSE=""
 
 S=${WORKDIR}/${PN}
 
@@ -37,7 +37,7 @@ src_install() {
 	insinto /usr/include
 	doins libjbig/*.h
 	dolib libjbig/libjbig{,85}$(get_libname)
-	use static-libs && dolib libjbig/libjbig{,85}.a
+	dolib libjbig/libjbig{,85}.a
 
 	dodoc ANNOUNCE CHANGES TODO libjbig/*.txt
 }
