@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/jbigkit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/jbigkit/ChangeLog,v 1.51 2012/03/12 17:57:41 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/jbigkit/ChangeLog,v 1.52 2012/03/12 19:15:37 ssuominen Exp $
+
+  12 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> jbigkit-2.0-r1.ebuild:
+  If we build static libraries, we should also install them.
 
   12 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org> jbigkit-2.0-r1.ebuild:
   Deploy static libs only if wanted.
